--- a/style.css
+++ b/style.css
@@ -13,14 +13,14 @@
   border-radius: 15px;
   margin: 50px;
   /* padding: 20px; */
-  z-index: 1;
+  z-index: 2;
   background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
   transition: 4s;
   transform: scale(0);
-  animation: zoom 8s forwards 1;
+  animation: zoom 5s forwards 1;
 }
 @keyframes zoom {
   0% {
@@ -57,7 +57,7 @@
   padding: 20px;
   background-color: white;
   display: flex;
-
+  height: 100%;
   justify-content: center;
 }
 
@@ -183,7 +183,7 @@ form {
   align-items: flex-end;
   justify-content: center;
   /* gap: 12px; */
-  /* position: relative; */
+  position: relative;
 }
 input {
   /* margin: 0px 0px; */
@@ -193,78 +193,135 @@ input {
   border: 0.1px solid #e5e5e5;
   background: transparent;
   /* position: relative; */
-  padding: 20px;
+  padding: 30px 20px 10px;
   color: #1c1c1c;
   font-size: 1.2em;
   font-weight: 600;
   background-color: unset;
 }
-label {
+.userLabel {
   position: absolute;
-  left: 140px;
-  top: 0;
-  display: inline-block;
+  left: 20px;
+  top: 20px;
+  font-size: 1.2em;
+  font-weight: 600;
+  color: #a1a1a1;
+  transition: transform 0.2s ease-in-out;
 }
-/* input::placeholder {
+input:focus + .userLabel,
+input:not(:placeholder-shown) + .userLabel {
+  transform: translateY(-1em);
+  font-size: 1em;
+  font-weight: 700;
+  margin-top: 8px;
+  color: #6a9f01;
+}
+input:not(:focus) + .userLabel,
+input:not(placeholder-shown) + .userLabel {
+  color: #636363;
+}
+.passLabel {
   position: absolute;
-  /* padding: 15px; */
-/* color: #9e9e9e; */
-/* font-size: 1.3em;
-  font-weight: 600; }*/
+  left: 20px;
+  top: 100px;
+  font-size: 1.2em;
+  font-weight: 600;
+  color: #a1a1a1;
+}
+input:focus + .passLabel,
+input:not(:placeholder-shown) + .passLabel {
+  transform: translateY(-1em);
+  font-size: 1em;
+  font-weight: 700;
+  color: #6a9f01;
+  margin-top: 8px;
+}
+input:not(:focus) + .passLabel,
+input:not(placeholder-shown) + .passLabel {
+  color: #636363;
+}
+input::placeholder {
+  color: transparent;
+}
 
 input:focus {
   border: 2px solid #6a9f01;
   outline: 0;
-} /*
-input:focus + input::placeholder,
-input:not(:placeholder-shown) + input::placeholder {
-  transform: translateY(-1em);
-} */
-/* input:focus::placeholder {
-  content: "Online ID";
-} */
+}
 
-/* placeholder::after {
+.container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin: 40px 0 0 0;
+  top: -20px;
+  left: -295px;
+  cursor: pointer;
+  font-size: 18px;
+  text-wrap: nowrap;
+}
+
+/* Hide the browser's default checkbox */
+.container input {
   position: absolute;
-  left: 5px;
-  top: 3px;
-  content: attr(data-placeholder);
-  pointer-events: none;
-  opacity: 0.6;
-} */
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  border-radius: 7px;
+  border: 1px #e2e2e2 solid;
+  background-color: #ffffff;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+  background-color: #f1f1f1;
+}
+
+/* When the checkbox is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  background-color: #fff;
+  border: 1px green solid;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: url(check_24dp_48752C_FILL0_wght400_GRAD0_opsz24.svg);
+  position: absolute;
+  display: none;
+  left: 0px;
+  top: 1px;
+  width: 5px;
+  height: 10px;
+}
+
+/* Show the checkmark when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
 #password {
   margin: 15px 0 10px 0;
+  position: relative;
 }
-#check {
-  transform: scale(0.4);
-  left: -210px;
+#showPass {
+  /* display: none; */
   position: absolute;
-  display: flex;
-  accent-color: #eeffe9;
-}
-#check::after {
-  content: "Remember me";
-  margin-left: 300px;
-  font-size: 2.3em;
-  text-wrap: nowrap;
-  padding: 5px 0;
-  color: #4b4b4b;
+  transform: translate(-15px, -40px);
+  font-weight: 600;
+  color: #848484;
+  cursor: pointer;
 }
 
-/* input[type="checkbox"]:not(:checked) {
-  height: 30px;
-  border-radius: 28px;
-  border: 0.1px solid #e5e5e5;
-  background: transparent;
-  /* position: absolute; */
-/* display: block; 
-} */
-
-/* input[type="checkbox"]:checked {
-  height: 30px;
-  border-radius: 18px;
-  border: 0.1px solid #e5e5e5;
-} */
 #submit {
   background-color: #c4c4c4;
   color: white;
@@ -273,11 +330,11 @@ input:not(:placeholder-shown) + input::placeholder {
   height: 55px;
   text-align: center;
   padding: 10px;
-  margin: 80px 0 20px 0;
+  margin: 15px 0 20px 0;
+  position: relative;
+  transition: 2s;
 }
-#submit:active {
-  background-color: #6a9f01;
-}
+
 .forgot {
   color: #6a9f01;
   font-size: 0.9em;
@@ -300,4 +357,29 @@ input:not(:placeholder-shown) + input::placeholder {
 }
 .footer a {
   color: #6a9f01;
+}
+.hidden {
+  opacity: 0;
+  transition: 5s ease-in forwards;
+  /* display: none; */
+}
+.loader {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 3px solid #ffffff80;
+  border-top-color: #ffffff;
+  animation: ani1 1s ease infinite;
+  position: absolute;
+  top: 245px;
+  left: 210px;
+  display: none;
+}
+@keyframes ani1 {
+  0% {
+    transform: rotate(0turn);
+  }
+  100% {
+    transform: rotate(1turn);
+  }
 }
